update styles.css (fix alignment of topic-titles)

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -133,7 +133,7 @@ main > div:first-child > h2 {
     float: left;
 }
 
-.card-body {
+.topic>.card-body {
     text-align: center;
 }
 
